@@ -1,3 +1,12 @@
+2006-10-09  Robert Schuster  <robertschuster@fsfe.org>
+
+	* native/jni/java-net/gnu_java_net/VMPlainSocketImpl.c:
+	(Java_gnu_java_net_VMPlainSocketImpl_joinGroup): Properly
+	convert jstring into char *.
+	(Java_gnu_java_net_VMPlainSocketImpl_joinGroup6): Dito.
+	(Java_gnu_java_net_VMPlainSocketImpl_leaveGroup): Dito.
+	(Java_gnu_java_net_VMPlainSocketImpl_leaveGroup6): Dito.
+
 2006-10-09  Roman Kennke  <kennke@aicas.com>
 
 	* javax/swing/JTree.java
@@ -8,7 +17,7 @@
 	* javax/swing/JTree.java
 	(isSelected): Delegate to the selection model directly.
 
-2006-10-03  Robert Schuster  <robertschuster@fsfe.org>
+2006-10-09  Robert Schuster  <robertschuster@fsfe.org>
 
 	* gnu/java/nio/KqueueSelectorImpl.java: Renamed field
 	sizeof_struct_kevent to _sizeof_struct_kevent.
